kubernetes/monitoring/postgres-exporter.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres-exporter
  name: postgres-exporter
  namespace: default
spec:
  type: NodePort
  ports:
    - name: "9187"
      port: 9187
      targetPort: 9187
      nodePort: 31119
  selector:
    app: postgres-exporter
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-exporter
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-exporter
  template:
    metadata:
      labels:
        app: postgres-exporter
    spec:
      serviceAccountName: default
      restartPolicy: Always
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - env:
            - name: DATA_SOURCE_URI
              value: postgres?sslmode=disable
            - name: DATA_SOURCE_USER
              valueFrom:
                secretKeyRef:
                  name: postgres-creds
                  key: postgres-user
            - name: DATA_SOURCE_PASS
              valueFrom:
                secretKeyRef:
                  name: postgres-creds
                  key: postgres-password
          image: prometheuscommunity/postgres-exporter:v0.11.1
          imagePullPolicy: IfNotPresent
          name: postgres-exporter
          command:
            - /bin/postgres_exporter
            - --web.listen-address=:9187
            - --web.telemetry-path=/metrics
          ports:
            - containerPort: 9187
              name: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 1
            timeoutSeconds: 5
            periodSeconds: 5
